added the underscores to the HTML and starts a new game after a win/loss

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</header>
 
 	<section>
-		<div>Press any key to get started.</div>
+		<div>Press Enter to get started.</div>
 
 		<div>Wins:</div>
 		<div class="number-of-wins" id="wins"></div>
