bug fixes and hadded html for guesses

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 		<div>Number of guesses remaining:</div>
 		<div class="number-of-guesses" id="guesses-left"></div>
 
-		<div>Letters already guessed incorrectly:</div>
-		<div class="letters-guessed-incorrectly" id="wrongLetters"></div>
+		<div>Letters already guessed:</div>
+		<div class="letters-guessed" id="guessed-letters"></div>
 
 
 	</section>
