--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Hang man</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -13,29 +14,39 @@
 	<section class="container ">
 	<div class="row">
 	
-		<div class="col-6">
+		<div class="col-md-6">
 			<div id="football-team-logo"><img src="assets/images/NFLlogo.png"></div>
 			<div id="win-message"></div>
 			<div id="loss-message"></div>
 		</div>
 
-		<div class="col-6">
+		<div class="col-md-6">
 			<div>Press Enter to get started.</div>
 
-			<div>Wins:</div>
-			<div class="number-of-wins" id="wins"></div>
+			<div class="title row">Wins:&nbsp;
+				<div class="number-of-wins" id="wins"></div>
+			</div>
 			
-			<div>Losses:</div>
-			<div class="number-of-losses" id="losses"></div>
 			
-			<div>Current word:</div>
-			<div class="current-word" id="word"></div>
+			<div class="title row">Losses:&nbsp;
+				<div class="number-of-losses" id="losses"></div>
+			</div>
+			
+			
+			<div class="title row">Current word:&nbsp; 
+				<div class="current-word" id="word"></div>
+			</div>
+			
 
-			<div>Number of guesses remaining:</div>
-			<div class="number-of-guesses" id="guesses-left"></div>
+			<div class="title row">Number of guesses remaining:&nbsp; 
+				<div class="number-of-guesses" id="guesses-left"></div>
+			</div>
+			
 
-			<div>Letters already guessed:</div>
-			<div class="letters-guessed" id="guessed-letters"></div>
+			<div class="title row">Letters already guessed:&nbsp; 
+				<div class="letters-guessed" id="guessed-letters"></div>
+			</div>
+			
 		</div>
 
 
