--- a/index.html
+++ b/index.html
@@ -7,44 +7,44 @@
 </head>
 
 <body>
-	<header class = "header">
-		<h1>Hang man NFL teams.</h1>
+	<header class = "text-center header">
+		<h1>Hangman - NFL teams.</h1>
 	</header>
 
 	<section class="container ">
 	<div class="row">
 	
-		<div class="col-md-6">
+		<div class="col-md-6 logo-contianer">
 			<div id="football-team-logo"><img src="assets/images/NFLlogo.png"></div>
 			<div id="win-message"></div>
 			<div id="loss-message"></div>
 		</div>
 
-		<div class="col-md-6">
-			<div>Press Enter to get started.</div>
+		<div class="col-md-6 text-container">
+			<div><h2>Press Enter to get started.</h2></div>
 
-			<div class="title row">Wins:&nbsp;
-				<div class="number-of-wins" id="wins"></div>
+			<div class="title ">Wins:&nbsp;
+				<span class="number-of-wins" id="wins"></span>
 			</div>
 			
 			
-			<div class="title row">Losses:&nbsp;
-				<div class="number-of-losses" id="losses"></div>
+			<div class="title ">Losses:&nbsp;
+				<span class="number-of-losses" id="losses"></span>
 			</div>
 			
 			
-			<div class="title row">Current word:&nbsp; 
-				<div class="current-word" id="word"></div>
-			</div>
-			
-
-			<div class="title row">Number of guesses remaining:&nbsp; 
-				<div class="number-of-guesses" id="guesses-left"></div>
+			<div class="title ">Current word:&nbsp; 
+				<span class="current-word" id="word"></span>
 			</div>
 			
 
-			<div class="title row">Letters already guessed:&nbsp; 
-				<div class="letters-guessed" id="guessed-letters"></div>
+			<div class="title ">Guesses remaining:&nbsp; 
+				<span class="number-of-guesses" id="guesses-left"></span>
+			</div>
+			
+
+			<div class="title ">Letters already guessed:&nbsp; 
+				<span class="letters-guessed" id="guessed-letters"></span>
 			</div>
 			
 		</div>
