added error messages

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<div id="football-team-logo"><img src="assets/images/NFLlogo.png"></div>
 			<div id="win-message"></div>
 			<div id="loss-message"></div>
+			<div id="error-message"></div>
 		</div>
 
 		<div class="col-md-6 text-container">
